Makefile target for building compiler example

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ ccheck
 ccheck-hos
 syc
 syc-hos
+example/test.asm
+example/test.bin
+example/test.map
+example/test.tap
 test/*/*-vg.txt
 test/*/*.c.diff
 test/*/*.h.diff
