Put syc regression tests into place
Currently only bad tests are implemented. Valgrind leak checks are not
enabled, because compilation of the only available regression test
is not leak-free.

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,21 @@
 *.o
-ccheck
-ccheck-hos
-syc
-syc-hos
-example/test.asm
-example/test.bin
-example/test.map
-example/test.ir
-example/test.tap
-example/test.vric
-test/*/*-vg.txt
-test/*/*.c.diff
-test/*/*.h.diff
-test/*/*.txt.diff
-test/all.diff
-test/selfcheck.out
-test/test-int.out
-test/test-syc-int.out
+/ccheck
+/ccheck-hos
+/syc
+/syc-hos
+/example/test.asm
+/example/test.bin
+/example/test.map
+/example/test.ir
+/example/test.tap
+/example/test.vric
+/test/ccheck/*/*-vg.txt
+/test/ccheck/*/*.c.diff
+/test/ccheck/*/*.h.diff
+/test/ccheck/*/*.txt.diff
+/test/ccheck/all.diff
+/test/selfcheck.out
+/test/syc/*/*.txt.diff
+/test/syc/all.diff
+/test/test-int.out
+/test/test-syc-int.out
