Verify IR parsing as part of example target
So it must be possible to parse the IR produced from example/test.c.
Add missing instructions to IR parser.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 /example/test.bin
 /example/test.map
 /example/test.ir
+/example/test.ir.asm
+/example/test.ir.ir
 /example/test.tap
 /example/test.vric
 /test/ccheck/*/*-vg.txt
