Local variables code gen
Tah-dah! Local variables are working now. Although note that nested
blocks (and thus nested scopes) are not implemented.

Also added mul16 example, an excelent test for Z80 register allocation
(which still needs to be implemented).

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 /ccheck-hos
 /syc
 /syc-hos
+/example/mul16.asm
+/example/mul16.bin
+/example/mul16.map
+/example/mul16.tap
 /example/test.asm
 /example/test.bin
 /example/test.map
