Generalize example build rules

--- a/.gitignore
+++ b/.gitignore
@@ -4,17 +4,13 @@
 /syc
 /syc-hos
 /example/mul16.asm
-/example/mul16.bin
-/example/mul16.map
-/example/mul16.tap
 /example/test.asm
-/example/test.bin
-/example/test.map
-/example/test.ir
-/example/test.ir.asm
-/example/test.ir.ir
-/example/test.tap
-/example/test.vric
+/example/*.bin
+/example/*.ir
+/example/*.ir.asm
+/example/*.map
+/example/*.tap
+/example/*.vric
 /test/ccheck/*/*-vg.txt
 /test/ccheck/*/*.c.diff
 /test/ccheck/*/*.h.diff
